--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -3,10 +3,12 @@
     %h1{class: "text-3xl text-red-500 sm:text-4xl leading-normal font-extrabold tracking-tight"}
       Наші послуги
 %div{class: "mx-auto p-5 sm:p-10 md:p-16"}
+  %h2{class: "text-center my-4 text-xl text-stone-500 sm:text-2xl leading-normal font-extrabold tracking-tight"}
+    Ремонт одягу
   %div{class: "grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xl:grid-cols-4 lg:grid-cols-4 gap-10"}
-    - @services.each do |service|
+    - @services.repair.each do |service|
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
-        %div{class: "row text-justify"}
+        %div{class: "row"}
           - if service.image.attached?
             = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
           - else
@@ -15,7 +17,28 @@
             %div{class: "mb-8"}
               %p{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = service.title
-              %p{class: "text-gray-700 text-sm text-ellipsis"}
+              %p{class: "text-gray-700 text-sm text-ellipsis text-justify"}
+                = service.description
+          -#%div{class: "pe-2 pb-2 text-red-500 w-full flex justify-end items-end"}
+          -#  %div{class: "pe-2 sm:pe-4 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
+          -#    Докладніше
+
+%div{class: "mx-auto p-5 sm:p-10 md:p-16"}
+  %h2{class: "text-center my-4 text-xl text-stone-500 sm:text-2xl leading-normal font-extrabold tracking-tight"}
+    Індивідуальний пошив одягу
+  %div{class: "grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xl:grid-cols-4 lg:grid-cols-4 gap-10"}
+    - @services.sewing.each do |service|
+      %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
+        %div{class: "row"}
+          - if service.image.attached?
+            = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
+          - else
+            = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
+          %div{class: "p-4 pt-2 h-auto md:h-72"}
+            %div{class: "mb-8"}
+              %p{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
+                = service.title
+              %p{class: "text-gray-700 text-sm text-ellipsis text-justify"}
                 = service.description
           -#%div{class: "pe-2 pb-2 text-red-500 w-full flex justify-end items-end"}
           -#  %div{class: "pe-2 sm:pe-4 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
