add generation titles and description

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     = favicon_link_tag asset_path('favicon.png')
     %meta{content: "text/html; charset=UTF-8", "http-equiv": "Content-Type"}
     %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
-    %meta{name: "description", content: "Швейна майстерня ☞ ДРУЖБА ☜ у Кривому Розі. Шукаєте ідеальний ремонт одягу? Ми пропонуємо якісний ремонт та ексклюзивне пошиття одягу. Довіртеся майстрам!"}
+    %meta{name: "description", content: "#{@page_description}"}
     %meta{name: "revisit-after", content: "1 days"}
 
     = csrf_meta_tags
