--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,15 +16,15 @@
     = csp_meta_tag
     = stylesheet_link_tag "application", "inter-font", "data-turbo-track": "reload"
     = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
-    = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true
+    = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true, async: "true"
 
     -# FlowbiteJS
     %link{href: "https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css", rel: "stylesheet"}
-    %script{:src => "https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"}
+    %script{async: "true", src: "https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"}
     
     -# AnimatedCSS and WOWjs
     %link{href: "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", rel: "stylesheet"}
-    %script{crossorigin: "anonymous", integrity: "sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==", referrerpolicy: "no-referrer", src: "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"}
+    %script{async: "true", crossorigin: "anonymous", integrity: "sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==", referrerpolicy: "no-referrer", src: "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"}
 
     -# Google fonts
     %link{href: "https://fonts.googleapis.com", rel: "preconnect"}
