--- a/app/views/shared/_7_faq.html.haml
+++ b/app/views/shared/_7_faq.html.haml
@@ -14,7 +14,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+            %h3{class: "text-md leading-6 font-medium text-gray-900"}
               Чи здійснюєте ви ремонт одягу?
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 p-2 px-10 w-full flex items-center rounded-xl"}
@@ -29,14 +29,14 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+            %h3{class: "text-md leading-6 font-medium text-gray-900"}
               Сільки мені буде коштувати виправити зіпсовану або пошкоджену речь?
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 p-2 px-10 w-full flex items-center rounded-xl"}
             %p{class: "text-gray-700"}
               Розрахунок кінцевої якості залежить від складності ремонту. Подивіться орієнтовни
               %span{class: "text-red-500 hover:border-b-2 hover:border-red-500"}
-                = link_to "ціни", services_path
+                = link_to "ціни", prices_path
               на румонт одягу.
           %div{class: "hidden sm:flex items-center justify-center p-3 ml-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-comment-dots"}
@@ -46,7 +46,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+            %h3{class: "text-md leading-6 font-medium text-gray-900"}
               Я можу в вас заказати пошив якойсь речі індивідуально?
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 p-2 px-10 w-full flex items-center rounded-xl"}
@@ -64,12 +64,12 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+            %h3{class: "text-md leading-6 font-medium text-gray-900"}
               Скільки коштує індивідуальний пошив?
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 p-2 px-10 w-full flex items-center rounded-xl"}
             %p{class: "text-gray-700 "}
-              На вартість пошиву впливають дуже багато факторів, такі як складність иа фасон вирібу,
+              На вартість пошиву впливають дуже багато факторів, такі як складність на фасон вирібу,
               якість та кількість матеріалів, терміновість пошиву. Подивіться орієнтовні
               %span{class: "text-red-500 hover:border-b-2 hover:border-red-500"}
                 = link_to "ціни", prices_path
@@ -82,7 +82,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900 "}
+            %h3{class: "text-md leading-6 font-medium text-gray-900 "}
               Ви працюєте з матеріалами замовника для пошиву речей?
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 p-2 px-10 w-full flex items-center rounded-xl"}
