--- a/app/views/shared/_1_hero_section.html.haml
+++ b/app/views/shared/_1_hero_section.html.haml
@@ -2,20 +2,20 @@
   %div{class: "mx-auto container px-6 lg:px-8"}
     %div{class: "mx-auto max-w-7xl text-center font-messiri"}
       %div{class: "text-2xl font-bold tracking-tight sm:text-3xl font-medium uppercase text-red-500"}
-        Шукаєте ідеальний ремонт одягу?
+        = t "landing.hero-1.top"
+        
       %h1{class: "mt-6 leading-8 text-stone-900 text-light text-2xl md:text-3xl"}
         %div{class: "tracking-wide"}
-          Ми пропонуємо якісний ремонт та ексклюзивне пошиття одягу. Весь спектр послуг кравця.
+          = t "landing.hero-1.h1"
+          
         %div{class: "flex flex-col md:flex-row justify-evenly py-2"}
           %div{class: "rounded-lg shadow-lg bg-orange-100 text-orange-800 m-2 md:w-2/5 px-2 py-1"}
-            Довіртеся майстрам!
+            = t "landing.hero-1.left"
+
           %div{class: "rounded-lg shadow-lg bg-orange-100 text-orange-800 m-2 md:w-2/5 px-2 py-1"}
-            Ваш стиль – це наша турбота!
-        -#%div{class: ""}
-          Звертайтесь до нас, і ми з радістю втілимо ваші мрії в реальність!
-        -#%div{class: ""}
-        -#  Якість послуг та ціни змушують наших клієнтів приходити до нас знову та знову.
+            = t "landing.hero-1.right"
+
     %div{class: "mt-3 flow-root"}
       %div{class: "w-full transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 rounded-xl p-2 ring-1 ring-inset lg:-m-4 lg:rounded-2xl lg:p-4 bg-gray-900/5 ring-gray-900/10"}
-        = image_tag("hero.avif", loading: 'lazy', class: "w-full h-[300px] md:h-[400px]", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
+        = image_tag("hero.avif", loading: 'lazy', class: "w-full h-[300px] md:h-[400px]", alt: "#{t "landing.hero-1.img_alt"}")
 
