--- a/app/views/admin/services/_show_content.html.haml
+++ b/app/views/admin/services/_show_content.html.haml
@@ -46,4 +46,4 @@
       .col-md-3
         .text-muted.fw-bold= service.class.human_attribute_name(:body)
       .col-md-9
-        = service.body
+        = service.service_body
