--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -14,4 +14,4 @@
               %blockquote{class: "text-base leading-8 my-5 text-stone-700 mb-4 text-2xl border-s-4 border-stone-300 p-4 shadow-md"}
                 = @article.description
               %p{class: "text-base leading-8 my-5"}
-                = @article.body
+                = @article.article_body
