--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -16,7 +16,7 @@
               %blockquote{class: "text-base leading-8 my-5 text-stone-700 mb-4 text-2xl border-s-4 border-stone-300 p-4 shadow-md"}
                 = @service.description
               %p{class: "text-base leading-8 my-5"}
-                = @service.body
+                = @service.service_body
           %div{class: "text-end p-4"}
             = link_to "Повернутись на попередню сторінку", :back, class: "justify-end text-xl hover:border-b-2 hover:border-red-500 text-stone-500 hover:text-stone-900"
 
