--- a/app/views/admin/articles/_show_content.html.haml
+++ b/app/views/admin/articles/_show_content.html.haml
@@ -38,6 +38,6 @@
   .list-group-item
     .row
       .col-md-3
-        .text-muted.fw-bold= article.class.human_attribute_name(:article_body)
+        .text-muted.fw-bold= article.class.human_attribute_name(:body)
       .col-md-9
-        = article.article_body
+        = article.body
